k8s/02-pg_tileserv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: osm
  name: pg-tileserv
  labels:
    app.kubernetes.io/name: pg-tileserv
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pg-tileserv
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pg-tileserv
    spec:
      containers:
        - name: pg-tileserv
          image: pramsey/pg_tileserv
          ports:
            - containerPort: 7800
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  namespace: osm
  name: pg-tileserv
spec:
  selector:
    app.kubernetes.io/name: pg-tileserv
  ports:
    - protocol: TCP
      port: 7800
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: osm
  name: pg-tileserv
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - osm.jandal.se
      secretName: osm-jandal-tls
  rules:
    - host: osm.jandal.se
      http:
        paths:
          - path: /tiles
            pathType: Prefix
            backend:
              service:
                name: pg-tileserv
                port:
                  number: 7800
